RESOLVED FIXED174493
[WinCairo] error 'm_compositorTexture': undeclared identifier since Bug 174345
https://bugs.webkit.org/show_bug.cgi?id=174493
Summary [WinCairo] error 'm_compositorTexture': undeclared identifier since Bug 174345
Fujii Hironori
Reported 2017-07-13 22:14:46 PDT
[WinCairo] error 'm_compositorTexture': undeclared identifier since Bug 174345 https://build.webkit.org/builders/WinCairo%2064-Bit%20Release/builds/4338 > [111/547] Building CXX object Source\WebCore\CMakeFiles\WebCore.dir\platform\graphics\opengl\GraphicsContext3DOpenGLES.cpp.obj > FAILED: Source/WebCore/CMakeFiles/WebCore.dir/platform/graphics/opengl/GraphicsContext3DOpenGLES.cpp.obj > (snip) > C:\WebKit-BuildSlave\win-cairo-release\build\Source\ThirdParty\ANGLE\include\GLES2/gl2ext.h(1611): warning C4005: 'GL_COLOR_ATTACHMENT0_EXT': macro redefinition > c:\webkit-buildslave\win-cairo-release\build\source\webcore\platform\graphics\OpenGLESShims.h(48): note: see previous definition of 'GL_COLOR_ATTACHMENT0_EXT' > ..\..\Source\WebCore\platform\graphics\opengl\GraphicsContext3DOpenGLES.cpp(113): error C2065: 'm_compositorTexture': undeclared identifier > ..\..\Source\WebCore\platform\graphics\opengl\GraphicsContext3DOpenGLES.cpp(114): error C2065: 'm_compositorTexture': undeclared identifier
Attachments
Patch (3.87 KB, patch)
2017-07-13 23:07 PDT, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2017-07-13 23:07:12 PDT
WebKit Commit Bot
Comment 2 2017-07-14 08:58:51 PDT
Comment on attachment 315404 [details] Patch Clearing flags on attachment: 315404 Committed r219505: <http://trac.webkit.org/changeset/219505>
WebKit Commit Bot
Comment 3 2017-07-14 08:58:52 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.