Source/WebCore/platform/graphics/cairo/GraphicsContext3DCairo.cpp
@@ -90,7 +90,9 @@ GraphicsContext3D::GraphicsContext3D(GraphicsContext3DAttributes attributes, Hos
     , m_currentHeight(0)
     , m_attrs(attributes)
     , m_texture(0)
+#if USE(COORDINATED_GRAPHICS_THREADED)
     , m_compositorTexture(0)
+#endif
     , m_fbo(0)
 #if USE(COORDINATED_GRAPHICS_THREADED)
     , m_intermediateTexture(0)
@@ -233,8 +235,10 @@ GraphicsContext3D::~GraphicsContext3D()
     makeContextCurrent();
     if (m_texture)
         ::glDeleteTextures(1, &m_texture);
+#if USE(COORDINATED_GRAPHICS_THREADED)
     if (m_compositorTexture)
         ::glDeleteTextures(1, &m_compositorTexture);
+#endif
 
     if (m_attrs.antialias) {
         ::glDeleteRenderbuffers(1, &m_multisampleColorBuffer);
